--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -120,6 +120,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2001-05">May 2001
 <option value="gcc/2001-04">Apr 2001
 <option value="gcc/2001-03">Mar 2001
 <option value="gcc/2001-02">Feb 2001
@@ -166,6 +167,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2001-05">May 2001
 <option value="gcc-bugs/2001-04">Apr 2001
 <option value="gcc-bugs/2001-03">Mar 2001
 <option value="gcc-bugs/2001-02">Feb 2001
@@ -212,6 +214,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2001-05">May 2001
 <option value="gcc-patches/2001-04">Apr 2001
 <option value="gcc-patches/2001-03">Mar 2001
 <option value="gcc-patches/2001-02">Feb 2001
@@ -250,6 +253,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2001-05">May 2001
 <option value="gcc-help/2001-04">Apr 2001
 <option value="gcc-help/2001-03">Mar 2001
 <option value="gcc-help/2001-02">Feb 2001
@@ -273,6 +277,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2001-05">May 2001
 <option value="gcc-cvs/2001-04">Apr 2001
 <option value="gcc-cvs/2001-03">Mar 2001
 <option value="gcc-cvs/2001-02">Feb 2001
@@ -311,6 +316,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2001-05">May 2001
 <option value="gcc-testresults/2001-04">Apr 2001
 <option value="gcc-testresults/2001-03">Mar 2001
 <option value="gcc-testresults/2001-02">Feb 2001
@@ -362,6 +368,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="gcc-regression/2001-05">May 2001
 <option value="gcc-regression/2001-04">Apr 2001
 <option value="gcc-regression/2001-03">Mar 2001
 <option value="gcc-regression/2001-02">Feb 2001
@@ -416,6 +423,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++/2001-05">May 2001
 <option value="libstdc++/2001-04">Apr 2001
 <option value="libstdc++/2001-03">Mar 2001
 <option value="libstdc++/2001-02">Feb 2001
@@ -475,6 +483,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="java/2001-05">May 2001
 <option value="java/2001-04">Apr 2001
 <option value="java/2001-03">Mar 2001
 <option value="java/2001-02">Feb 2001
