Fix and update three broken (for mirror sites) and updated links.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -29,7 +29,7 @@ familiarize yourself with the <a href="../contribute.html">requirements
 for contributions</a> to GCC.</p>
 
 <p>Many of these projects will require at least a reading knowledge of
-GCC's intermediate language, <a href="../onlinedocs/gcc_17.html">RTL</a>.
+GCC's intermediate language, <a href="http://gcc.gnu.org/onlinedocs/gcc_18.html">RTL</a>.
 It may help to understand the higher-level <code>tree</code> structure as
 well.  Unfortunately, for this we only have an <a
 href="../onlinedocs/c-tree_toc.html">incomplete, C/C++ specific manual</a>.</p>
@@ -447,8 +447,8 @@ There is also work to be done in cleaning up the places where the MI
 code uses machine-specific macros.</p>
 
 <p>In addition to understanding RTL, you need to read the <a
-href="../onlinedocs/gcc_18.html">machine description</a> and <a
-href="../onlinedocs/gcc_19.html">target macros</a> sections of the GCC
+href="http://gcc.gnu.org/onlinedocs/gcc_19.html">machine description</a> and <a
+href="http://gcc.gnu.org/onlinedocs/gcc_20.html">target macros</a> sections of the GCC
 manual.</p>
 
 <ul>
