* cvswrite.html: Update to use the handy-dandy form. * gnatswrite.html: Update to use the handy-dandy form. By Rodney Brown <rbrown64@csc.com.au>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -29,10 +29,9 @@ significant developers. Maintainers are also encouraged to edit the
 provide us with your public key which you can generate via the
 "ssh-keygen" program.  This will store your public key in the file
 .ssh/identity.pub in your home directory.
-We need the entire contents of that file.  You should mail it directly
-to <a href="mailto:law@cygnus.com"> law@cygnus.com</a>.  Yes, we
-realize it's a public key, but there's no sense in cluttering up the
-developers list with keys.</p>
+Please use
+<a href="http://sources.redhat.com/cgi-bin/pdw/ps_form.cgi">this form</a>
+to supply the file and your other details.</p>
 
 <p>Once we have this information we will set up an account on
 gcc.gnu.org and inform you by mail.  At this point you should be
