--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -9,9 +9,11 @@
 
 <p>In order to manage PRs, you need an account for our GNATS database
 which is different from the authenticated access to the CVS repository
-(though the username will be the same). If you do not have a GNATS
-account yet (and think you should <CODE>;-)</CODE>) please contact
-overseers@gcc.gnu.org.</p>
+(though the username will be the same). If you have CVS write access
+or a "senior" GCC Maintainer agrees that
+you should have a GNATS account, fill in
+<a href="http://sources.redhat.com/cgi-bin/pdw/ps_form.cgi">this form</a>
+with "GNATS access only" in the SSH key part.</p>
 
 <p>Also, when you manage PRs, make sure mail-forwarding from
 gcc.gnu.org to your normal email account is activated; otherwise
