--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -205,6 +205,9 @@ Successful
 <p><b>rs6000-ibm-aix4.3.3.0</b><br>
 Successful
 
+<p><b>s390-unknown-linux-gnu</b><br>
+Successful
+
 <p><b>sparc-sun-solaris2.4</b><br>
 Successful
 
