Add more features.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -61,6 +61,8 @@
         standard (such as <code>a = a++;</code>, <code>a[n] =
         b[n++];</code> and <code>a[i++] = i;</code>), included in
         <code>-Wall</code>.</li>
+    <li>Additional warning option <code>-Wfloat-equal</code>.</li>
+    <li>Improvements to <code>-Wtraditional</code>.</li>
     <li>Fortran improvements are listed in
         <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
         documentation</a>.</li>
@@ -119,10 +121,19 @@
         received, should be submitted again to the bug tracking
         database using <code>gccbug</code> if you can reproduce the
         problem with GCC 3.0.)</li>
+    <li>The internal <code>libgcc</code> library is <a
+        href="libgcc.html">built as a shared library</a> on systems
+        that support it.</li>
     <li>Extensive testsuite included with GCC, with many new
         tests.  In addition to tests for GCC bugs that have been
         fixed, many tests have been added for language features,
         compiler warnings and builtin functions.</li>
+    <li>Additional language-independent warning options
+        <code>-Wpacked</code>, <code>-Wpadded</code>,
+        <code>-Wunreachable-code</code> and
+        <code>-Wdisabled-optimization</code>.</li>
+    <li>Target-independent options <code>-falign-functions</code>,
+        <code>-falign-loops</code> and <code>-falign-jumps</code>.</li>
   </ul></li>
   <li>Plus a great many bugfixes and almost all the <a
   href="../gcc-2.95/features.html">features found in GCC 2.95</a>.</li>
