Mention systems where the system non-C99 <float.h> is used.

--- a/htdocs/gcc-3.0/c99status.html
+++ b/htdocs/gcc-3.0/c99status.html
@@ -308,7 +308,9 @@ pragmas.</li>
 <code>FLT_EVAL_METHOD</code> and <code>DECIMAL_DIG</code>) are
 included in most versions of <code>&lt;float.h&gt;</code>, but not yet
 <code>float-c4x.h</code>, <code>float-m68k.h</code> or
-<code>float-vax.h</code>.</li>
+<code>float-vax.h</code>.  Also, some targets such as Solaris use the
+system <code>&lt;float.h&gt;</code> but do not fix it to add these
+definitions.</li>
 
 <li>Compiler support is needed for <code>math_errhandling</code>; see
 messages <a
