Mention that gcc-help does not provide help on the gcc list.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -222,7 +222,8 @@ can use the following recipe (Use at your own risk!):</p>
 <h2>Help</h2>
 
 <p>For further information on using the lists, send a blank mail to
-<code><i>listname</i>-help@gcc.gnu.org</code>.</p>
+<code><i>listname</i>-help@gcc.gnu.org</code> (but note that this won't
+currently work for the <i>gcc</i> list).</p>
 
 <h2>Spam blocking</h2>
 
