--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: thanks.html,v 1.11 2000/11/17 01:21:14 pme Exp $ -->
+<!-- $Id: thanks.html,v 1.12 2000/12/03 23:35:09 jsm28 Exp $ -->
 </HEAD>
 <BODY>
 
@@ -25,7 +25,7 @@
    Please keep this list in alphabetical order.
 
    <!--
-         Latest update 2000-05-16, more or less.
+         Latest update 2001-05-16, more or less.
    -->
 <UL>
 
@@ -87,8 +87,13 @@
 
   <LI>Felix Natter for documentation on porting.
 
+  <LI>Gerald &quot;Jerry&quot; Pfeifer for lots of help on merging with
+      the main GCC project.
+
   <LI>Chip Salzenberg for patches and improvements to locales, traits,
       Makefiles, libio, libtool hackery, and &quot;long long&quot; support.
+
+  <LI>Peter Schmid for constant testing, and header file tweaks.
 
   <LI>Scott Snyder for queue, iterator, istream, and string fixes and
       testsuite entries.
@@ -98,6 +103,9 @@
   <LI>Brent Verner for work with the cshadow files and their associated
       configure steps.
 
+  <LI>Stephen M. Webb for time and effort on making shadow files work
+      with the tricky Solaris 8+ headers.
+
 </UL></P>
 
 <P>We'd also like to thank the folks who have contributed time and
@@ -106,6 +114,7 @@
 
 <UL>
 
+  <LI>David Billinghurst
   <LI>David Gilbert
   <LI>Levente Farkas 
   <LI>J&uuml;rgen Freyh
@@ -113,6 +122,7 @@
   <LI>llewelly <!-- Honest, that's the only name in the messages. -->
   <LI>Loren James Rittle
   <LI>George Talbot
+  <LI>Carlo Wood
 
 </UL></P>
 
