Move section on ChangeLogs. Add a section on Makefiles.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -15,6 +15,21 @@ but they should be used for new code.  If changing existing
 code to follow these conventions, it is best to send changes to follow
 the conventions separately from any other changes to the code.</p>
 
+
+<h2>ChangeLogs</h2>
+
+<p>GCC requires ChangeLog entries for documentation changes (see <a
+href="http://gcc.gnu.org/ml/gcc-bugs/1998-03/msg00564.html">message</a>),
+though for changes to the GCC web pages (as opposed to the
+libstdc++-v3 ones) there is no appropriate ChangeLog file and the CVS
+logs suffice.</p>
+
+<p>There is no established convention on when ChangeLog entries are to
+be made for testsuite changes; see messages <a
+href="http://gcc.gnu.org/ml/gcc/2000-09/msg00287.html">1</a> and <a
+href="http://gcc.gnu.org/ml/gcc/2000-09/msg00290.html">2</a>.</p>
+
+
 <h2>Portability</h2>
 
 <p>There are strict requirements for portability of code in GCC to
@@ -44,18 +59,12 @@ over the different argument order used by <code>memcpy</code> and
 <code>memmove</code> though in most cases <code>memcpy</code> is the
 appropriate replacement.</p>
 
-<h2>ChangeLogs</h2>
 
-<p>GCC requires ChangeLog entries for documentation changes (see <a
-href="http://gcc.gnu.org/ml/gcc-bugs/1998-03/msg00564.html">message</a>),
-though for changes to the GCC web pages (as opposed to the
-libstdc++-v3 ones) there is no appropriate ChangeLog file and the CVS
-logs suffice.</p>
+<h2>Makefiles</h2>
 
-<p>There is no established convention on when ChangeLog entries are to
-be made for testsuite changes; see messages <a
-href="http://gcc.gnu.org/ml/gcc/2000-09/msg00287.html">1</a> and <a
-href="http://gcc.gnu.org/ml/gcc/2000-09/msg00290.html">2</a>.</p>
+<p><code>touch</code> should never be used in GCC Makefiles.  Instead
+of <code>touch foo</code> always use <code>$(STAMP) foo</code>.</p>
+
 
 <h2>Testsuite Conventions</h2>
 
@@ -72,6 +81,7 @@ they relate to, possibly with a reference to a PR in GNATS.  There are
 some <a
 href="http://gcc.gnu.org/ml/gcc/2000-01/msg00593.html">copyright
 guidelines</a> on what can be included in the testsuite.</p>
+
 
 <h2>Miscellaneous Conventions</h2>
 
