--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: status.html,v 1.10 2001/02/21 18:15:35 pme Exp $ -->
+<!-- $Id: status.html,v 1.11 2001/05/17 21:31:38 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -24,6 +24,16 @@
    <A HREF="http://gcc.gnu.org/gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</A>
    is the ninth snapshot release,
    <A HREF="download.html">libstdc++-2.90.8.tar.gz</A>.
+</P>
+
+<P>If you are using
+   <A HREF="http://gcc.gnu.org/gcc-2.95/gcc-2.95.2.html">GCC 2.95.3</A>,
+   then the most recent usable version of this library is <EM>still</EM>
+   the ninth snapshot release,
+   <A HREF="download.html">libstdc++-2.90.8.tar.gz</A>, <EM>and</EM> you
+   will need to apply
+   <A HREF="libstdc++-2.90.8-compat-gcc-2.95.3.diff">this patch</A> to
+   mirror the changes made in gcc/glibc.
 </P>
 
 <P>New things that work are in the latest
