Document support for static and type qualifiers in parameter array declarators.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -64,7 +64,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em><code>static</code> and type qualifiers<br>in parameter array declarators</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>complex (and imaginary) support in <code>&lt;complex.h&gt;</code></em></td>
@@ -367,6 +367,9 @@ statements to be done first.</li>
 may be used (that they, and unions containing them (possibly
 recursively), shall not be members of structures or elements of
 arrays) are not checked.</li>
+
+<li>The information provided by <code>static</code> in parameter array
+declarators is not used for optimization.</li>
 
 <li>The list above differs from that in the C99 standard as follows:
 "LIA compatibility annex" is removed, since it refers to C99's
