* htdocs/c99status.html: Update for UCN status. 	* htdocs/gcc-3.0/c99status.html: Similarly.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -102,7 +102,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>universal character names (<code>\u</code> and <code>\U</code>)</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>extended identifiers</em></td>
