* index.html: Mention hash synchronization.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -66,6 +66,15 @@ GDB and related tools are
 
 <table>
 <tr><td valign="top">
+<b>May 30, 2001</b>
+</td><td>
+We now have a new hash-table based lightweight lock implementation which was 
+contributed by Hans Boehm. The new code should reduce memory consumption and 
+improve performance for applications which do a lot of synchronization. 
+Currently, this code is enabled for IA-64 and X86 Linux.
+</td></tr>
+
+<tr><td valign="top">
 <b>April 25, 2001</b>
 </td><td>
 Bryce McKinlay merged <tt>java.security</tt> with Classpath.
