--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -294,6 +294,18 @@ tahoe. These are listed here just for completeness.
 
   </ul></li>
 
+  <li>Sequence point rules in C:
+  <ul>
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n925.htm">
+    A formal model of sequence points and related issues by
+    Clive Feather</a></li>
+    <li><a href="http://www.cl.cam.ac.uk/users/mn200/PhD/thesis-report.ps.gz">
+    C formalised in HOL, thesis by Michael Norrish</a></li>
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n926.htm">
+    Sequence points analysis by Raymond Mak</a></li>
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n927.htm">
+    Another formalism for sequence points by D. Hugh Redelmeier</a></li>
+  </ul></li>
   <li>C historical information:
 
   <ul>
