Document new category "bootstrap".

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -74,6 +74,11 @@ does not foo", "objc crashes when doing bar".</dd>
 <dd>This indicates the GCC subproject which is affected by the problem.
     Currently, it can be one of
   <dl>
+  <dt>bootstrap</dt>
+  <dd>GCC fails to bootstrap. This should be filed <em>only</em> if a
+  bootstrap failure prevails for an extended period of time (at least
+  one week) on any platform (and possibly not-so-common conditions like
+  a read-only srcdir), or non-mainstream platforms.
   <dt>c++</dt>
   <dd>A problem with the C++ compiler.</dd>
   <dt>c</dt>
