Mention new invocation interface and Brainfood.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -66,6 +66,16 @@ GDB and related tools are
 
 <table>
 <tr><td valign="top">
+<b>June 4, 2001</b>
+</td><td>
+Per Bothner of Brainfood Inc has implemented an invocation interface
+allowing an existing non-Java thread to start and connect to a Java
+environment.  The GCJ start-up code now uses this interface.
+Brainfood is using this to attach an Apache module to a pre-compiled
+servlet-like class.
+</td></tr>
+
+<tr><td valign="top">
 <b>May 30, 2001</b>
 </td><td>
 We now have a new hash-table based lightweight lock implementation which was 
