Change my affiliation to Brainfood.

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -22,7 +22,7 @@ At the moment the steering committee has 14 members. The best place to
 reach them is the gcc <a href="lists.html">mailinglist</a>.
 
 <ul>
-<li>Per Bothner (independent consultant)</li>
+<li>Per Bothner (Brainfood Inc)</li>
 <li>Joe Buck (Synopsys)</li>
 <li>David Edelsohn (IBM)</li>
 <li>Kaveh R. Ghazi</li>
