Clarify that we only provide sources. By Joe Buck <jbuck@synopsys.com>.

--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -9,13 +9,18 @@
 <h1 align="center">GCC Releases</h1>
 
 <p>Apart from providing our <a href="cvs.html">sources by means of CVS</a>
-we also make releases available for FTP download.</p>
+we also make source code for our releases available for FTP download.</p>
 
 <p>Please use our
 <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/releases/index.html">main
 mirror site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
 
-<p>If you are looking for pre-compiled binaries for various platforms, please
+<p><em>Important: because these are source releases, they will be
+of little use to you if you do not already have a C compiler on your
+machine.</em>  If you don't already have a compiler, you need pre-compiled
+binaries.
+
+<p>To find pre-compiled binaries for various platforms, please
 refer to our <a href="install/binaries.html">binaries page</a>.</p>
 
 <h2><a name="timeline">Timeline</a></h2>
