Mention fix for libio problem with glibc 2.2.

--- a/htdocs/gcc-2.95/gcc-2.95.3.html
+++ b/htdocs/gcc-2.95/gcc-2.95.3.html
@@ -44,6 +44,7 @@ for the GNU Compiler Collection.
 	<li>Fix a PIC failure on sparc targets.
 	<li>On ix86 targets, the regparm attribute should now work reliably.
 	<li>Several updates for the h8300 port.
+	<li>Fix problem building libio with glibc 2.2.
     </ul>
 </ul>
 
