Update mips references.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -176,18 +176,8 @@ tahoe. These are listed here just for completeness.
   <br>The *el variants are little-endian configurations.
   <br>Various MIPS stuff:
   <ul>
-    <li><a href="http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf">
-	http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf">
-	http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf">
-	http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf">
-	http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf">
-	http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf">
-	http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf</a>
+    <li><a href="http://www.mips.com/publications/index.html">
+	http://www.mips.com/publications/index.html</a>
   </ul>
 
  <li>mn10200
