* cpplib.html: Fix typo.

--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -109,7 +109,7 @@ after thought, which is not entirely coincidental.
       it should use cpplib's token codes.
 
   <li>String concatenation should be handled in the function
-      <code>c-lex</code> in <tt>c-lex.c</tt>.  Then the front ends would
+      <code>c_lex</code> in <tt>c-lex.c</tt>.  Then the front ends would
       not have to jump through hoops to remember to concatenate
       strings, and we could simplify the parsers a little too.
 </ol>
