--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -411,7 +411,7 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a>
 
-  <li><a href=http://www.sco.com/developer/gabi">The System V Application Binary Interface</a>
+  <li><a href="http://www.sco.com/developer/gabi/">The System V Application Binary Interface</a>
 
   <li><a href="http://www.esofta.com/softspecs.html">System V PowerPC ABI</a>
 
