Add caveats on iostream in libstdc++-v3. By Scott Johnston <scott@accom.com>.

--- a/htdocs/gcc-3.0/caveats.html
+++ b/htdocs/gcc-3.0/caveats.html
@@ -30,6 +30,14 @@
 
   <li>The Chill compiler is not included in GCC 3.0, because of the
   lack of a volunteer to convert it to use garbage collection.</li>
+
+  <li>Certain non-standard iostream methods from earlier versions of
+  libstdc++ are not included in libstdc++ v3, i.e.  filebuf::attach,
+  ostream::form, and istream::gets. Here are workaround hints for:
+  <a href="http://gcc.gnu.org/onlinedocs/libstdc++/21_strings/howto.html">ostream::form</a>,
+  <a href="http://gcc.gnu.org/onlinedocs/libstdc++/ext/howto.html">filebuf::at
+tach</a>.</li>
+
 </ul>
 
 </body>
