--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -44,8 +44,9 @@
     <li>New C++ ABI, capable of inter-operating with other IA-64 compilers.</li>
     <li>The new ABI also significantly reduces the size of symbol and debug
         information.</li>
-    <li>New C++ support library and many C++ bug fixes, vastly improving our
-        conformance to the ISO C++ standard.</li>
+    <li>New <a href="http://gcc.gnu.org/libstdc++/">C++ support library</a>
+        and many C++ bug fixes, vastly improving our conformance to the
+        ISO C++ standard.</li>
     <li>New <a href="../news/inlining.html">inliner for C++</a>.</li>
     <li>Rewritten C preprocessor, integrated into the C, C++ and
         Objective C compilers, with very many improvements including
