2001-06-13  Phil Edwards  <pme@sources.redhat.com>
	* thanks.html:  Mention more people.

--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: thanks.html,v 1.12 2000/12/03 23:35:09 jsm28 Exp $ -->
+<!-- $Id: thanks.html,v 1.13 2001/05/17 21:31:38 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -25,9 +25,11 @@
    Please keep this list in alphabetical order.
 
    <!--
-         Latest update 2001-05-16, more or less.
+         Latest update 2001-06-12, more or less.
    -->
 <UL>
+
+  <LI>J. David Anglin for threading-related fixes and improvements.
 
   <LI>Michael Cook for cleanup patches to reduce warnings.
 
@@ -87,13 +89,21 @@
 
   <LI>Felix Natter for documentation on porting.
 
+  <LI>Alexandre Oliva for keeping libtool issues sane and happy.
+
   <LI>Gerald &quot;Jerry&quot; Pfeifer for lots of help on merging with
       the main GCC project.
+
+  <LI>Loren James Rittle for threading fixes, thread-related configury
+      changes, and solutions to really tricky I/O problems.
 
   <LI>Chip Salzenberg for patches and improvements to locales, traits,
       Makefiles, libio, libtool hackery, and &quot;long long&quot; support.
 
   <LI>Peter Schmid for constant testing, and header file tweaks.
+
+  <LI>Kenny Simpson for prompting fixes due to defect reports from the
+      LWG (thereby keeping us in line with updates from the ISO).
 
   <LI>Scott Snyder for queue, iterator, istream, and string fixes and
       testsuite entries.
@@ -104,7 +114,8 @@
       configure steps.
 
   <LI>Stephen M. Webb for time and effort on making shadow files work
-      with the tricky Solaris 8+ headers.
+      with the tricky Solaris 8+ headers, and for pushing the build-time
+      header tree.
 
 </UL></P>
 
@@ -120,7 +131,6 @@
   <LI>J&uuml;rgen Freyh
   <LI>James Kanze
   <LI>llewelly <!-- Honest, that's the only name in the messages. -->
-  <LI>Loren James Rittle
   <LI>George Talbot
   <LI>Carlo Wood
 
