Added John Gilmore.

--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -43,10 +43,11 @@ IA-64 libffi port, and other work.
 <li>Eric Christopher for his porting help and clean-ups.
 <li>The <a href="http://www.classpath.org">GNU Classpath project</a> for all of their merged runtime code.
 <li>Mo DeJong for gcj and libgcj bug fixes.
-<li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
 <li>The GCC project <a
 href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
 great compiler work.
+<li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
+<li>John Gilmore for a donation to the FSF earmarked improving GNU Java.
 <li>Anthony Green for various contributions.
 <li>Stu Grossman for gdb hacking, allowing us to debug our code.
 <li>Andrew Haley for his amazing compiler and library efforts.
