Markup fix and two new entries. By Dan Nicolaescu <dann@godzilla.ics.uci.edu>.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -16,7 +16,9 @@
 <li><a href="#bounds_checking_with_bounded_pointers">Bounds Checking with Bounded Pointers</a>
 <li><a href="#new_register_allocator">New register allocator</a>
 <li><a href="#ssa_for_trees">SSA for trees</a>
+<li><a href="#ssa_conditional_constant_propagation_pass">SSA Conditional Constant Propagation Pass</a>
 <li><a href="#value_range_propagation_pass">Value range propagation pass</a>
+<li><a href="#automaton_based_pipeline_hazard_recognizer">Automaton based pipeline hazard recognizer</a>
 </ul>
 <li><a href="#optimizer_inadequacies">Optimizer inadequacies</a>
 <li><a href="#changes_to_support_c99_standard">Changes to support C99 standard</a>
@@ -111,14 +113,27 @@ the tag <code>new-regalloc-branch</code>. It is known to bootstrap
 under x86-linux and ppc-linux.</p>
 
 <h3><a name="ssa_for_trees">SSA for trees</h3>
-<p>Diego Novillo is working on implementing SSA analysis for trees. 
-A patch was posted at <a
-href="http://gcc.gnu.org/ml/gcc-patches/2001-03/msg00565.html"></a>.</p>
+<p>Diego Novillo is working on implementing
+<a href="http://gcc.gnu.org/ml/gcc-patches/2001-03/msg00565.html">
+ SSA analysis for trees</a>.</p>
+
+<h3><a name="ssa_conditional_constant_propagation_pass">SSA Conditional Constant Propagation Pass</h3>
+<p>Daniel Berlin has posted an 80% complete
+<a href="http://gcc.gnu.org/ml/gcc-patches/2001-05/msg01237.html">
+ SSA based Conditional Constant Propagation pass</a>.
+Help finishing it would be appreciated.</p>
 
 <h3><a name="value_range_propagation_pass">Value range propagation pass</h3>
 <p>John Wehle (john@feith.com) implemented a <a
 href="http://gcc.gnu.org/ml/gcc-patches/2000-07/msg00968.html">value
 range propagation pass</a> which isn't yet in GCC.</p>
+
+<h3><a name="automaton_based_pipeline_hazard_recognizer">Automaton based pipeline hazard recognizer</h3> 
+<p>Vladimir Makarov has implemented an 
+<a href="http://gcc.gnu.org/ml/gcc-patches/2001-06/msg00951.html">
+automaton based pipeline hazard recognizer</a>. It enables better
+instruction scheduling and it provides the base for a future sofware
+pipelining implementation.</p>
 
 
 <h2><a name="optimizer_inadequacies">Optimizer inadequacies</h2>
